# heimdall-vision

./: .gitignore  README.md  benchmark.py  dashboard.py  debug_output.txt  web_viewer.py
dashboard/templates/: index.html
docs/: architecture_design.md
heimdall/: main.py  rust_bridge.py  test_contamination.py
heimdall/config/: simulation.yaml
heimdall/core/: acquisition.py  config.py  main.py  pipeline.py  system.py
heimdall/detectors/: base.py  contamination_detector.py
heimdall/inspection/: base_inspector.py  contamination_inspector.py
rust/: Cargo.toml  Dockerfile  ENVIRONMENT_SETUP.md  GUIDE_INSTALLATION.md  README.md  setup_dev_env.sh
rust/.cargo/: config.toml
rust/.github/workflows/: rust.yml
rust/examples/: camera_capture.rs  gige_bottle_inspection.rs  performance_analysis.rs  realtime_processing.rs
rust/examples/detection/: README.md  bottle_defect_detector.rs
rust/heimdall-camera/: Cargo.toml
rust/heimdall-camera/src/: aravis.rs  lib.rs  simulator.rs
rust/heimdall-cli/: Cargo.toml
rust/heimdall-core/: Cargo.toml
rust/heimdall-core/src/: acquisition.rs  detection.rs  lib.rs  processing.rs
rust/heimdall-gige/: Cargo.toml  README.md
rust/heimdall-gige/benches/: acquisition_bench.rs
rust/heimdall-gige/src/: camera.rs  config.rs  diagnostics.rs  error.rs  frame.rs  lib.rs  sync.rs  utils.rs
rust/heimdall-ipc/: Cargo.toml
rust/heimdall-lighting/: Cargo.toml  README.md
rust/heimdall-lighting/examples/: pet_bottle_inspection.rs
rust/heimdall-lighting/src/: lib.rs
rust/heimdall-lighting/src/calibration/: auto_intensity.rs  mod.rs  uniformity.rs
rust/heimdall-lighting/src/controllers/: ethernet.rs  mod.rs  serial.rs  simulator.rs
rust/heimdall-lighting/src/diagnostics/: alerts.rs  mod.rs  monitoring.rs
rust/heimdall-lighting/src/synchronization/: camera_sync.rs  external_sync.rs  mod.rs  timing.rs
rust/heimdall-perf/: Cargo.toml  README.md
rust/heimdall-perf/src/: lib.rs  metrics.rs  profiler.rs  reports.rs  system.rs
rust/heimdall-pipeline/: Cargo.toml  README.md
rust/heimdall-pipeline/benches/: pipeline_bench.rs
rust/heimdall-pipeline/examples/: bottle_inspection.rs
rust/heimdall-pipeline/src/: buffer.rs  lib.rs  metrics.rs  pipeline.rs  scheduler.rs  timestamp.rs
rust/heimdall-py/: Cargo.toml
rust/heimdall-rt/: Cargo.toml
rust/heimdall-rt/src/: lib.rs  scheduler.rs  sync.rs
rust/heimdall-server/: Cargo.toml
scripts/: 000_test_environment.py  001_create_structure.sh  RT-SYSTEM-README.md  setup-rt-system.sh
