[package]
name = "heimdall-camera"
version = "0.1.0"
edition = "2021"
authors = ["Heimdall Systems Team"]
description = "Camera interface for Heimdall Vision System"

[dependencies]
# Dépendances de base
heimdall-core = { path = "../heimdall-core" }
thiserror = "1.0.50"
log = "0.4.20"
tracing = "0.1.40"

# Interface avec Aravis (GigE Vision)
aravis-rs = "0.6.3"
aravis-sys = "0.6.3"

# Gestion asynchrone
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"

# Sérialisation
serde = { version = "1.0.193", features = ["derive"] }

# Gestion de la configuration
config = "0.13.3"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.3"