[package]
name = "heimdall-cli"
version = "0.1.0"
edition = "2021"
authors = ["Heimdall Systems Team"]
description = "Command-line interface for Heimdall Vision System"

[dependencies]
# Composants Heimdall
heimdall-core = { path = "../heimdall-core" }
heimdall-camera = { path = "../heimdall-camera" }
heimdall-ipc = { path = "../heimdall-ipc" }

# Interface CLI
clap = { version = "4.4.8", features = ["derive"] }
dialoguer = "0.10.4"
indicatif = "0.17.7"
console = "0.15.7"

# Sérialisation
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Client HTTP
reqwest = { version = "0.11.22", features = ["json", "blocking"] }