[package]
name = "heimdall-core"
version = "0.1.0"
edition = "2021"
authors = ["Heimdall Systems Team"]
description = "High-performance core components for Heimdall Vision System"

[lib]
name = "heimdall_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core functionality
image = "0.24.7"
ndarray = "0.15.6"
opencv = { version = "0.84.5", features = ["opencv-4", "contrib"] }
rayon = "1.8.0"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.1"

# Python bindings
pyo3 = { version = "0.19.0", features = ["extension-module"] }
numpy = "0.19.0"

[features]
default = ["python"]
python = ["pyo3/extension-module"]
standalone = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1