[package]
name = "heimdall-ipc"
version = "0.1.0"
edition = "2021"
authors = ["Heimdall Systems Team"]
description = "Inter-process communication for Heimdall Vision System"

[dependencies]
# Dépendances de base
heimdall-core = { path = "../heimdall-core" }
thiserror = "1.0.50"
log = "0.4.20"
tracing = "0.1.40"

# Mémoire partagée
shared_memory = "0.12.4"
memmap2 = "0.7.1"

# Communication par messages
ipc-channel = "0.16.1"
zmq = "0.10.0"
tokio-zmq = "0.12.0"

# Sérialisation
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"

# Gestion asynchrone
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"

[dev-dependencies]
tempfile = "3.8.1"