[package]
name = "heimdall-lighting"
version = "0.1.0"
edition = "2021"
authors = ["Heimdall Systems Team"]
description = "LED lighting control module for Heimdall Vision System"

[dependencies]
# Dépendances de base
heimdall-core = { path = "../heimdall-core" }
heimdall-camera = { path = "../heimdall-camera" }
thiserror = "1.0.50"
log = "0.4.20"
tracing = "0.1.40"

# Gestion asynchrone
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"

# Sérialisation
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Communication série et GPIO
serialport = "4.2.2"
rppal = { version = "0.15.0", optional = true }  # Pour Raspberry Pi GPIO

# Gestion de la configuration
config = "0.13.3"

# Mesure de temps précise
chrono = "0.4.31"
crossbeam-channel = "0.5.8"

# Python bindings
pyo3 = { version = "0.19.0", features = ["extension-module"], optional = true }
numpy = { version = "0.19.0", optional = true }

[features]
default = []
raspberry_pi = ["rppal"]
python = ["pyo3", "numpy"]

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.3"
criterion = "0.5.1"

[[bench]]
name = "lighting_benchmark"
harness = false